--- a/loops/loops_(need).ipynb
+++ b/loops/loops_(need).ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "47115ae9",
    "metadata": {},
    "outputs": [
@@ -360,10 +360,29 @@
    "source": [
     "# Your solution here\n",
     "# use 'for' loop with 'range()' to generate list of squares of the first ten integers (0 to 9) from zero\n",
-    "list = []\n",
+    "lst = []\n",
     "for i in range(10):\n",
-    "    list.append(i**2)\n",
-    "print(list)"
+    "    lst.append(i**2)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5d4d0d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "':' expected after dictionary key (1002888434.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    lst = list({'nine':9, 'eight'8})\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m ':' expected after dictionary key\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = list({'nine':9, 'eight'8})"
    ]
   },
   {
