--- a/loops/loops_(nice).ipynb
+++ b/loops/loops_(nice).ipynb
@@ -1,1 +1,393 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Nice)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 There is more\u2026"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 There is more to list comprehension"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 Zipping a dictionary"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.3 for and while has an else"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Explore 1 :  Changing a list"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Explore 2 :  A list of power"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Explore 3 :  Time profiling"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Nice)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0568a2c",
+   "metadata": {},
+   "source": [
+    "## 1 There is more…"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3deb384e",
+   "metadata": {},
+   "source": [
+    "### 1.1 There is more to list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5870520c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 'A'],\n",
+       " [0, 'B'],\n",
+       " [0, 'C'],\n",
+       " [1, 'A'],\n",
+       " [1, 'B'],\n",
+       " [1, 'C'],\n",
+       " [2, 'A'],\n",
+       " [2, 'B'],\n",
+       " [2, 'C'],\n",
+       " [3, 'A'],\n",
+       " [3, 'B'],\n",
+       " [3, 'C'],\n",
+       " [4, 'A'],\n",
+       " [4, 'B'],\n",
+       " [4, 'C']]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "# example 1\n",
+    "[[a,b] for a in range(5) for b in ['A', 'B', 'C']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8ac09701",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 'A'], [1, 'B'], [1, 'C'], [3, 'A'], [3, 'B'], [3, 'C']]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# example 2\n",
+    "# incorporating condition\n",
+    "[[a,b] for a in range(5) for b in ['A', 'B', 'C'] if a % 2 != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "40330e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# example 3\n",
+    "# flatten a list\n",
+    "nested_list=[[1, 2, 3], [4, 5, 6, 7]]\n",
+    "[y for x in nested_list for y in x]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52cb6e6d",
+   "metadata": {},
+   "source": [
+    "### 1.2 Zipping a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "36c221db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Natasha Romanoff': 'Black Widow',\n",
+       " 'Tony Stark': 'Iron Man',\n",
+       " 'Stephen Strange': 'Doctor Strange'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "super_names=[\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "real_names=[\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]\n",
+    "\n",
+    "dict(zip(real_names, super_names))\n",
+    "\n",
+    "# dict() is used to recast zip()'s output into a dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca725abb",
+   "metadata": {},
+   "source": [
+    "### 1.3 for and while has an else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4de7c3b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No negative numbers in the list\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "#'for' and 'while' loops come with optional 'else'\n",
+    "#'else' executed only if loops are completed\n",
+    "#'else' won't run if exit prematurely(by using 'break')\n",
+    "\n",
+    "numbers=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "for i in numbers:\n",
+    "    if i < 0: break\n",
+    "else:\n",
+    "    print('No negative numbers in the list')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4ecef017",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding negative number = no message\n",
+    "# as there is a break and 'else' doesn't run\n",
+    "\n",
+    "numbers=[-1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "for i in numbers:\n",
+    "    if i < 0: break\n",
+    "else:\n",
+    "    print('No negative numbers in the list')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f25c050",
+   "metadata": {},
+   "source": [
+    "## Explore 1 :  Changing a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4389239f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"jackfruit\",\n",
+    "          \"pineapple\", \"papaya\", \"watermelons\",\n",
+    "          \"peaches\", \"durian\",  \"mangoes\",\n",
+    "          \"strawberries\", \"passionfruit\"\n",
+    "          ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3c84a99e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'jackfruit', 'watermelons', 'durian', 'mangoes', 'strawberries']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove fruits starting with 'p'\n",
+    "\n",
+    "for fruit in fruits:\n",
+    "    if fruit[0:10] == \"p\":\n",
+    "        fruits.remove(fruit)\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3112179",
+   "metadata": {},
+   "source": [
+    "## Explore 2 :  A list of power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b7bd323",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1], [2, 4, 8], [3, 9, 27], [4, 16, 64], [5, 25, 125]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# attempt to create a list [n, n^2, n^3] for several values of n\n",
+    "# specify max value by changing 'maximum_n'\n",
+    "\n",
+    "maximum_n = 5\n",
+    "result = [[] for i in range(5)]\n",
+    "\n",
+    "for n in range(1, maximum_n + 1):  # maximum_n + 1 when run = maximum_n\n",
+    "    result[n - 1].append(n)\n",
+    "    result[n - 1].append(n**2) \n",
+    "    result[n - 1].append(n**3) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a509e3e3",
+   "metadata": {},
+   "source": [
+    "for `maximum_n = 5`, content of `result` should be:\n",
+    "[[1, 1, 1],\n",
+    " [2, 4, 8],\n",
+    " [3, 9, 27],\n",
+    " [4, 16, 64],\n",
+    " [5, 25, 125]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e949d16",
+   "metadata": {},
+   "source": [
+    "## Explore 3 :  Time profiling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f443deb2",
+   "metadata": {},
+   "source": [
+    "Use `%%timeit` to compare the execution speeds of the following:\n",
+    "\n",
+    "|#|**Option 1**|**Option 2**|**Result**|\n",
+    "|:---|:--:|:--:|---:|\n",
+    "|1|Creating a list of squares with `for` loop|Creating a list of squares with `while` loop\n",
+    "|2|Creating a list of squares with a `for` loop|Creating a list of squares with a **list comprehension** loop\n",
+    "|3|Creating a list of squares using **list** `append()`|Creating a list of squares using **list** `+=`\n",
+    "|4|Creating a list of squares using **list** `append()`|Creating a list of squares using `append()` of **Numpy**\n",
+    "|5|Creating a list of squares using **Numpy**|Creating a list of squares using **List comprehension** loop\n",
+    "\n",
+    "Kiwi: Lowkey very tedious ;-; will try to get back when I actually have time"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
